objects/pse__Risk__c.object
<CustomObject>
    <customHelpPage>pse__RiskHelp</customHelpPage>
    <description>Contains risks raised against projects.</description>
    <fields>
        <fullName>pse__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account relating to the risk.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Closed_Date__c</fullName>
        <description>The date that the risk was closed.</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Closed__c</fullName>
        <description>Determines when closed based on the risk&apos;s Status. Defaults to true when the Status is Closed. Set to false for Open.</description>
        <formula>If( ISPICKVAL( pse__Status__c, &apos;Open&apos;), false, true)</formula>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Comments__c</fullName>
        <description>Additional comments about the risk.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Contingency__c</fullName>
        <description>A description for the plan of contingency to take place against the risk.</description>
        <label>Contingency</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Date_Raised__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The date that the risk was raised.</description>
        <label>Date Raised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Impact__c</fullName>
        <description>The impact of the risk. Values are 1 to 5. 1 is the lowest impact and 5 is the highest.</description>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The issue associated with the risk.</description>
        <inlineHelpText>The issue associated with the risk.</inlineHelpText>
        <label>Issue</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Issue__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>pse__Issue__c.pse__Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Opportunity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Issue__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Likelihood__c</fullName>
        <description>Picklist holding likelihood of risk to occur</description>
        <label>Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The milestone relating to the risk.</description>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Milestone__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Mitigation_Plan__c</fullName>
        <description>A description for the plan of mitigation to take place against the risk.</description>
        <label>Mitigation Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity relating to the risk.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project task relating to the risk.</description>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Task__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project relating to the risk.</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Risk_Description__c</fullName>
        <description>A description of the risk.</description>
        <label>Risk Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Risk_Name__c</fullName>
        <description>The name of the risk.</description>
        <label>Risk Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Risk_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The resource assigned as the risk owner.</description>
        <label>Risk Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Severity__c</fullName>
        <description>The severity of the risk. Calculated from Impact and Likelihood values.</description>
        <formula>VALUE( TEXT(pse__Impact__c ) ) * VALUE( TEXT(pse__Likelihood__c ) )</formula>
        <label>Severity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>The status of the risk. Values are Open and Closed.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Risk</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Risk Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <recordTypes>
        <fullName>TR_PS_Enterprise_Risk</fullName>
        <active>true</active>
        <label>TR PS Enterprise Risk</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>pse__Clear_closed_date_with_open_status</fullName>
        <active>true</active>
        <description>The Closed Date must be blank if the status is set to Open.</description>
        <errorConditionFormula>AND( ISPICKVAL( pse__Status__c , &apos;Open&apos;), NOT(ISBLANK( pse__Closed_Date__c )))</errorConditionFormula>
        <errorMessage>Closed date must be blank if status is set to Open</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Closed_date_greater_than_created_date</fullName>
        <active>true</active>
        <description>The risk&apos;s Closed Date must be after it was raised.</description>
        <errorConditionFormula>AND( ISPICKVAL( pse__Status__c, &apos;Closed&apos;),pse__Date_Raised__c &gt; pse__Closed_Date__c)</errorConditionFormula>
        <errorMessage>Closed date for the risk must be after the date it was raised.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Closed_date_mandatory_with_closed_status</fullName>
        <active>true</active>
        <description>The Closed Date cannot be blank if the status is set to Closed.</description>
        <errorConditionFormula>AND (ISPICKVAL( pse__Status__c , &apos;Closed&apos;), ISBLANK( pse__Closed_Date__c ))</errorConditionFormula>
        <errorMessage>Closed date can not be blank if status set to closed.</errorMessage>
    </validationRules>
</CustomObject>